# wichtler

./: .env.example  .gitignore  README.md  participants.csv.example  pyproject.toml
src/: wichtler.py
